--- a/index.html
+++ b/index.html
@@ -153,7 +153,19 @@
             opacity: 0;
         }
     </style>
+    
+<!--[if lte IE 9]>
+<style>
+    .icon-outline:before {
+        color: #c8cccf;
+    }
 
+    .icon-outline:hover:before {
+        color: black;
+    }
+</style>
+<![endif]-->
+    
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
